--- a/dashboard.html
+++ b/dashboard.html
@@ -459,9 +459,9 @@
         </p>
 
         
-
+        <div style="position: absolute; top: 30px;  height:220px; width: 100%; overflow: scroll;  scrollbar-width: thin;">
         <table id="workTableDashboard" class="table table-bordered table-hover"
-          style="margin-top: 30px; height:100px; width: 100px; overflow: scroll; ">
+          style="margin-top: 30px; left: 0px; height:100px; width: 100px; overflow: scroll; ">
           <thead id="thead">
             <tr>
               <th>Zone</th>
@@ -479,12 +479,12 @@
           </thead>
           <tbody></tbody>
         </table>
-
+      </div>
         <!-- /////////////////////////////////////////newly adedd  for pagination   19-03-2024 ////////////////////////////////////////////////////// -->
 
-        <div id="paginationControls" style="position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex;">
-          <button class="pagibtn" id="previousPageButton"><i class="fa-solid fa-backward"></i></button>
-          <span>Page <span id="currentPage"></span></span>
+        <div id="paginationControls" style="position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; font-size: 12px;">
+          <button class="pagibtn" style="background-color: transparent; color: #333;" id="previousPageButton"><i class="fa-solid fa-backward " ></i></button>
+          <span style="font-size: 8px;">Page <span id="currentPage"></span></span>
           <button class="pagibtn" id="nextPageButton"><i class="fa-solid fa-forward"></i></button>
         </div>
 
@@ -510,27 +510,20 @@
             display: inline-block;
             padding: 5px 10px;
             margin-right: 5px;
-            background-color: #f8f9fa;
-            border: 1px solid #dee2e6;
+            background-color:transparent;
+            border: 1px solid transparent;
             color: #495057;
             cursor: pointer;
           }
 
           #pagination button.active {
-            background-color: #007bff;
+            background-color: transparent;
             color: #fff;
-            border-color: #007bff;
+            /* border-color: #333; */
           }
         </style>
 
-        <!-- 
-        <div id="paginationControls"
-          style="position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex;">
-          <button class="pagibtn" id="previousPageButton"><i class="fa-solid fa-backward"></i></button>
-          <span>Page <span id="currentPage"></span></span>
-          <button class="pagibtn" id="nextPageButton"><i class="fa-solid fa-forward"></i></button>
-        </div> -->
-
+      
 
 
 
@@ -1153,6 +1146,7 @@
             });
             tablestats.css({
               display: "none",
+              fontSize: "12px",
             });
             printButton.css({
               display: "none",
