--- a/dashboard.html
+++ b/dashboard.html
@@ -2119,86 +2119,139 @@
     // //working on csv form
 
 
+    // function printData() {
+    //   const table = $('#workTableDashboard').DataTable();
+    //   const totalRecords = table.page.info().recordsTotal;
+    //   const pages = Math.ceil(totalRecords / table.page.info().length);
+
+    //   let csvContent = "data:text/csv;charset=utf-8,";
+    //   let headers = [];
+
+    //   // Get table headers
+    //   table.columns().every(function () {
+    //     headers.push($(this.header()).text());
+    //   });
+    //   csvContent += headers.join(",") + "\n";
+
+    //   // Iterate through each page
+    //   for (let i = 0; i < pages; i++) {
+    //     table.page(i).draw(false); // Move to page i
+
+    //     // Get data from the current page
+    //     table.rows().every(function () {
+    //       const rowData = [];
+    //       $(this.node()).find('td').each(function () {
+    //         rowData.push($(this).text().trim());
+    //       });
+    //       csvContent += rowData.join(",") + "\n";
+    //     });
+    //     // csvContent += headers.join(",") + "\n";
+
+    //     // // Iterate through each page
+    //     // for (let i = 0; i < pages; i++) {
+    //     //   table.page(i).draw(false); // Move to page i
+
+    //     //   // Get data from the current page
+    //     //   table.rows().every(function () {
+    //     //     const rowData = [];
+    //     //     $(this.node()).find('td').each(function () {
+    //     //       rowData.push($(this).text().trim());
+    //     //     });
+    //     //     csvContent += rowData.join(",") + "\n";
+    //     //   });
+    //     // }
+
+    //     // Restore to the first page
+    //     table.page(0).draw(false);
+
+    //     // Create a link to download the CSV file
+    //     const link = document.createElement("a");
+    //     link.setAttribute("href", encodeURI(csvContent));
+    //     link.setAttribute("download", "data.csv");
+
+
+    //     // // Apply fixed position to the button
+    //     //       link.style.position = "fixed";
+    //     //       link.style.top = "10px"; // Adjust as needed
+    //     //       link.style.right = "10px"; // Adjust as needed
+    //     //       document.body.appendChild(link); 
+    //     //       // Trigger click event to start download
+    //     //       link.click();
+
+    //     // Append the link to the table-container-dashboard
+    //     document.getElementById("table-container-dashboard").appendChild(link);
+
+    //     // Trigger click event to start download
+    //     link.click();
+    //     // Remove the link after the download starts
+    //     document.getElementById("table-container-dashboard").removeChild(link);
+    //   }
+
+    //   // Restore to the first page
+    //   table.page(0).draw(false);
+
+    //   // Create a link to download the CSV file
+    //   const link = document.createElement("a");
+    //   link.setAttribute("href", encodeURI(csvContent));
+    //   link.setAttribute("download", "data.csv");
+    //   document.body.appendChild(link);
+
+    //   // Trigger click event to start download
+    //   link.click();
+    // }
     function printData() {
-      const table = $('#workTableDashboard').DataTable();
-      const totalRecords = table.page.info().recordsTotal;
-      const pages = Math.ceil(totalRecords / table.page.info().length);
+  const table = $('#workTableDashboard').DataTable();
+  const totalRecords = table.page.info().recordsTotal;
+  const pages = Math.ceil(totalRecords / table.page.info().length);
 
-      let csvContent = "data:text/csv;charset=utf-8,";
-      let headers = [];
+  let csvContent = "data:text/csv;charset=utf-8,";
+  let headers = [];
 
-      // Get table headers
-      table.columns().every(function () {
-        headers.push($(this.header()).text());
-      });
-      csvContent += headers.join(",") + "\n";
+  // Get table headers
+  table.columns().every(function () {
+    headers.push($(this.header()).text());
+  });
+  csvContent += headers.join(",") + "\n";
 
-      // Iterate through each page
-      for (let i = 0; i < pages; i++) {
-        table.page(i).draw(false); // Move to page i
+  // Set to store unique rows
+  const uniqueRows = new Set();
 
-        // Get data from the current page
-        table.rows().every(function () {
-          const rowData = [];
-          $(this.node()).find('td').each(function () {
-            rowData.push($(this).text().trim());
-          });
-          csvContent += rowData.join(",") + "\n";
-        });
-        csvContent += headers.join(",") + "\n";
+  // Iterate through each page
+  for (let i = 0; i < pages; i++) {
+    table.page(i).draw(false); // Move to page i
 
-        // Iterate through each page
-        for (let i = 0; i < pages; i++) {
-          table.page(i).draw(false); // Move to page i
+    // Get data from the current page
+    const pageRows = table.rows().data().toArray();
+    pageRows.forEach(rowData => {
+      const rowValues = rowData.map(value => value.trim());
+      uniqueRows.add(rowValues.join(","));
+    });
+  }
 
-          // Get data from the current page
-          table.rows().every(function () {
-            const rowData = [];
-            $(this.node()).find('td').each(function () {
-              rowData.push($(this).text().trim());
-            });
-            csvContent += rowData.join(",") + "\n";
-          });
-        }
+  // Convert Set back to an array
+  const uniqueRowsArray = Array.from(uniqueRows);
 
-        // Restore to the first page
-        table.page(0).draw(false);
+  // Append unique rows to the CSV content
+  uniqueRowsArray.forEach(row => {
+    csvContent += row + "\n";
+  });
 
-        // Create a link to download the CSV file
-        const link = document.createElement("a");
-        link.setAttribute("href", encodeURI(csvContent));
-        link.setAttribute("download", "data.csv");
+  // Restore to the first page
+  table.page(0).draw(false);
 
+  // Create a link to download the CSV file
+  const link = document.createElement("a");
+  link.setAttribute("href", encodeURI(csvContent));
+  link.setAttribute("download", "data.csv");
+  document.body.appendChild(link);
 
-        // // Apply fixed position to the button
-        //       link.style.position = "fixed";
-        //       link.style.top = "10px"; // Adjust as needed
-        //       link.style.right = "10px"; // Adjust as needed
-        //       document.body.appendChild(link); 
-        //       // Trigger click event to start download
-        //       link.click();
+  // Trigger click event to start download
+  link.click();
 
-        // Append the link to the table-container-dashboard
-        document.getElementById("table-container-dashboard").appendChild(link);
+  // Remove the link after the download starts
+  document.body.removeChild(link);
+}
 
-        // Trigger click event to start download
-        link.click();
-        // Remove the link after the download starts
-        document.getElementById("table-container-dashboard").removeChild(link);
-      }
-
-      // Restore to the first page
-      table.page(0).draw(false);
-
-      // Create a link to download the CSV file
-      const link = document.createElement("a");
-      link.setAttribute("href", encodeURI(csvContent));
-      link.setAttribute("download", "data.csv");
-      document.body.appendChild(link);
-
-      // Trigger click event to start download
-      link.click();
-    }
 
   </script>
 
