--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMC</title>
-  <link rel="icon" href="png/pmcjpeg.jpg" type="image/x-icon">
+  <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="C_form.css" />
   <style>
     #map {
-      top: 65px;
+      top: 0px;
       left: 0px;
-      height: 93vh;
+      height: 99vh;
       width: 100%;
+      z-index: 1;
+    }
+
+    .leaflet-container .leaflet-control-attribution {
+    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    margin: 29px;
+    top: 151px;
+}
+/* Search icon */
+
+.leaflet-touch .geocoder-control-input {
+    height: 30px;
+    line-height: 30px;
+    background-size: 30px;
+    position: relative;
+    top: -5px;
+}
+    
+    /* .leaflet-control-zoom-in{
+      position: relative;
+      left: 50px;
+      border: 1px solid;
+    } */
+
+    .leaflet-control-zoom{
+      position: absolute;
+      left: 1450px;
+      top: 600px;
+      border: 1px solid;
     }
   </style>
   <!-- bootstrap -->
@@ -133,7 +162,7 @@
 
 <body>
   <div class="container-fluid">
-    <header class="header justify-content-between " id="header">
+    <header class="header justify-content-between bg-transparent" id="header">
       <div>
         <h5>GeoPulse</h5>
       </div>
