setup for building department
setup for building department

--- a/Conceptual_form.html
+++ b/Conceptual_form.html
@@ -675,6 +675,7 @@
 						localStorage.setItem('bufferWidth', response.data.data.width);
 						localStorage.setItem('roadLenght', response.data.data.lenght);
 						localStorage.setItem('wardname', response.data.data.wardname);
+						localStorage.setItem('department', response.data.data.department);
 						localStorage.setItem('conceptual_form_data_temp', JSON.stringify(formObject));
 						localStorage.removeItem('conceptual_form_data');
 						localStorage.removeItem('selectCoordinatesData');
