--- a/dashboard.html
+++ b/dashboard.html
@@ -419,12 +419,7 @@ button, input, optgroup, select, textarea {
 
           <div class="closebtn" onclick="closeNav()">&times;
 
-            <!-- </div> -->
-            <!-- <div class="nav_link" title="Download Report">
-              <i class="fa-solid fa-file-arrow-down nav_icon" id="generatePdfBtn" onclick="takeScreenshot()">
-              </i>
-            </div> -->
-
+         
 
           </div>
         </div>
@@ -436,7 +431,7 @@ button, input, optgroup, select, textarea {
 
   <div id="content">
     <div id="map"></div>
-
+<p class="geopulseaname">Deployed By GeoPulse Analytics Pvt. Ltd.</p>
 <!-- add button for open table -->
 
 <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
