--- a/dashboard.html
+++ b/dashboard.html
@@ -431,7 +431,7 @@ button, input, optgroup, select, textarea {
 
   <div id="content">
     <div id="map"></div>
-<p class="geopulseaname">Deployed By GeoPulse Analytics Pvt. Ltd.</p>
+<p class="geopulseaname">Devloped By GeoPulse Analytics Pvt. Ltd.</p>
 <!-- add button for open table -->
 
 <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
