--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
   <script src="libs/polyline-measure/line-measure.js"></script>
   <link rel="stylesheet" href="libs/leaflet-measure-master/leaflet-measure.css" />
   <script src="libs/leaflet-measure-master/leaflet-measure.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/leaflet-geometryutil@0.10.3/src/leaflet.geometryutil.min.js"></script>
+
 
   <!-- <script src="https://cdn.jsdelivr.net/npm/leaflet-measure@3.1.0/dist/leaflet-measure.min.js"></script>
  
@@ -397,7 +399,7 @@
 
         }
         
-        var url = `https://portal.geopulsea.com/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
+        var url = `https://pmc.geopulsea.com/geoserver/pmc/wms?SERVICE=WMS&VERSION=1.1.1&REQUEST=GetFeatureInfo&FORMAT=image%2Fpng&TRANSPARENT=true&QUERY_LAYERS=${layer}&STYLES&LAYERS=${layer}&exceptions=application%2Fvnd.ogc.se_inimage&INFO_FORMAT=application/json&FEATURE_COUNT=50&X=${Math.round(
           e.containerPoint.x
         )}&Y=${Math.round(e.containerPoint.y)}&SRS=EPSG%3A4326&WIDTH=${size.x
           }&HEIGHT=${size.y}&BBOX=${bbox}`;
@@ -533,7 +535,7 @@
 
 
               var payload = JSON.stringify({
-                geoJSON: featureData,
+                geoJSON: JSON.stringify(featureData),
                 roadLength: roadLength,
                 bufferWidth: bufferWidth,
                 gis_id: lastInsertedId,
