--- a/dashboard.html
+++ b/dashboard.html
@@ -203,7 +203,7 @@
 #openTableBtn{
   position: fixed;
   z-index: 9999;
-  top: 70%;
+  top: 65%;
   width: auto;
   /* height: 5.5%; */
   right: 0.8%;
@@ -280,7 +280,7 @@ button, input, optgroup, select, textarea {
 .leaflet-control-zoom{
       position: relative;
       right: 10%;
-      bottom: 0%;
+      bottom:-30px;
       border: 1px solid;
     }
   </style>
@@ -431,7 +431,7 @@ button, input, optgroup, select, textarea {
 
   <div id="content">
     <div id="map"></div>
-<p class="geopulseaname">Devloped By GeoPulse Analytics Pvt. Ltd.</p>
+<p class="geopulseaname">@GeoPulse Analytics</p>
 <!-- add button for open table -->
 
 <button id="openTableBtn"><img src="png/dtabasetable.png" alt="" class="tablebtn"></button>
