--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
  
 
     <div id="map"></div>
-    <p class="geopulseaname">Devloped By GeoPulse Analytics Pvt. Ltd.</p>
+    <p class="geopulseaname">Developed By GeoPulse Analytics Pvt. Ltd.</p>
 
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1"style="">
