--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
  
 
     <div id="map"></div>
-    <p class="geopulseaname">Developed By GeoPulse Analytics Pvt. Ltd.</p>
+    <p class="geopulseaname">@GeoPulse Analytics</p>
 
     <div>
       <img src="png/pmcjpeg.png" alt="" class="logopng1"style="">
