ui chnage dashboard

--- a/geometry_page.html
+++ b/geometry_page.html
@@ -60,9 +60,18 @@
 						></i>
 					</div>
 
-					<div id="map">
+					<div id="map"></div>
 
-						<p class="geopulseaname">@GeoPulse Analytics</p>
+						<p class="geopulseaname" style=" 
+							color: darkblue;
+							position: absolute;
+							z-index: 99999;
+							bottom: -1.5%;
+							right: 10%;
+							font-weight: bold;
+							/* background-color: rgba(173, 216, 230, 0.5); */
+							font-size: 10px;
+						  ">@GeoPulse Analytics</p>
 
 						<div id="table-container">
 							<table id="workTable" class="table table-bordered table-hover" style="width: 100% !important; font-size: 10px;" >
@@ -93,7 +102,6 @@
 								<tbody id="workTableData"></tbody>
 							</table>
 						</div>
-					</div>
 				</form>
 			</section>
 		</div>
