--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PMC</title>
   <link rel="stylesheet" href="C_form.css" />
-  <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="style.css" /> -->
   <link rel="icon" href="png/pmcjpeg.png" type="image/x-icon">
   
   <!-- Stylesheets -->
@@ -203,7 +203,7 @@
 #openTableBtn{
   position: fixed;
   z-index: 9999;
-  top: 65%;
+  top: 80%;
   width: auto;
   /* height: 5.5%; */
   right: 0.8%;
@@ -280,7 +280,7 @@ button, input, optgroup, select, textarea {
 .leaflet-control-zoom{
       position: relative;
       right: 10%;
-      bottom:-30px;
+      bottom:15px;
       border: 1px solid;
     }
   </style>
